更改一些公式错误

--- a/source/_posts/文本特征提取.md
+++ b/source/_posts/文本特征提取.md
@@ -86,11 +86,15 @@ array([[0, 1, 1, 1, 0, 0, 1, 0, 1],
 
 ​		在一个大的文本语料库中，一些单词将出现很多次（例如 “the”, “a”, “is” ），因此对文档的实际内容没有什么有意义的信息。 如果我们将直接计数数据直接提供给分类器，那么这些频繁词组会掩盖住那些我们关注但很少出现的词。为了重新计算特征权重，并将其转化为适合分类器使用的浮点值，因此使用 tf-idf 变换是非常常见的。
 
-Tf表示术语**频率**，而 tf-idf 表示术语**频率**乘以**转制文档频率**: $\text{tf-idf(t,d)}=\text{tf(t,d)} \times \text{idf(t)}$.
+Tf表示术语**频率**，而 tf-idf 表示术语**频率**乘以**转制文档频率**: ${tfidf(t,d)}={tf(t,d)}{idf(t)}$.
 
-**转制文档频率**:$\text{idf}(t) = log{\frac{1 + n_d}{1+\text{df}(d,t)}} + 1$，其中 ![n_d](https://sklearn.apachecn.org/docs/0.21.3/img/6d8a1d709ef804f4629126d6e1c449f1.jpg) 是文档的总数，![\text{df}(d,t)](https://sklearn.apachecn.org/docs/0.21.3/img/ede6a26a443c24b8cea943a4a6f144f0.jpg) 是包含术语 ![t](https://sklearn.apachecn.org/docs/0.21.3/img/12b2c1da1f9041738fa7153efc651372.jpg) 的文档数。
+**转制文档频率**:${idf}(t) = log{\frac{1 + n_d}{1+{df}(d,t)}} + 1$，其中$n_d$是文档的总数，${df}(d,t)$ 是包含术语t的文档数。
 
-然后，所得到的 tf-idf 向量通过欧几里得范数归一化：$v_{norm} = \frac{v}{||v||_2} = \frac{v}{\sqrt{v{_1}^2 + v{_2}^2 + \dots + v{_n}^2}}$
+然后，所得到的 tf-idf 向量通过欧几里得范数归一化:
+$$
+v_{norm} = \frac{v}{||v||_2} = \frac{v}{\sqrt{v{_1}^2 + v{_2}^2 + \dots + v{_n}^2}}
+$$
+
 
 ```python
 >>> from sklearn.feature_extraction.text import TfidfTransformer
