--- a/source/_posts/文本特征提取.md
+++ b/source/_posts/文本特征提取.md
@@ -90,7 +90,11 @@ Tf表示术语**频率**，而 tf-idf 表示术语**频率**乘以**转制文档
 
 **转制文档频率**:$\text{idf}(t) = log{\frac{1 + n_d}{1+\text{df}(d,t)}} + 1$，其中 ![n_d](https://sklearn.apachecn.org/docs/0.21.3/img/6d8a1d709ef804f4629126d6e1c449f1.jpg) 是文档的总数，![\text{df}(d,t)](https://sklearn.apachecn.org/docs/0.21.3/img/ede6a26a443c24b8cea943a4a6f144f0.jpg) 是包含术语 ![t](https://sklearn.apachecn.org/docs/0.21.3/img/12b2c1da1f9041738fa7153efc651372.jpg) 的文档数。
 
-然后，所得到的 tf-idf 向量通过欧几里得范数归一化：$v_{norm} = \frac{v}{||v||_2} = \frac{v}{\sqrt{v{_1}^2 + v{_2}^2 + \dots + v{_n}^2}}$
+然后，所得到的 tf-idf 向量通过欧几里得范数归一化：
+$$
+v_{norm} = \frac{v}{||v||_2} = \frac{v}{\sqrt{v{_1}^2 + v{_2}^2 + \dots + v{_n}^2}}
+$$
+
 
 ```python
 >>> from sklearn.feature_extraction.text import TfidfTransformer
