--- a/source/_posts/朴素贝叶斯分类.md
+++ b/source/_posts/朴素贝叶斯分类.md
@@ -1,11 +1,13 @@
 ---
 title: 朴素贝叶斯
 date: 2020-02-26
-tags: 
+tag: 
 - 机器学习
 - NLP
-description: 讨论贝叶斯分类的中最简单的一种: 朴素贝叶斯分类,及其在文本分类中的应用。
+description: 介绍贝叶斯理论，及朴素贝叶斯的简单应用。
 ---
+
+
 
 # 朴素贝叶斯
 
