--- a/source/_posts/关联分析算法.md
+++ b/source/_posts/关联分析算法.md
@@ -3,7 +3,7 @@ title: 关联分析算法
 date: 2020-02-27
 tag:
 - 数据挖掘
-describe: 介绍一种最有影响力的挖掘布尔关联规则的频繁项集的算法-Apriori算法，及其改进算法FP-growth算法。
+description: 介绍一种最有影响力的挖掘布尔关联规则的频繁项集的算法-Apriori算法，及其改进算法FP-growth算法。
 ---
 
 ## 关联分析算法
