--- a/source/_posts/2020-07-02-操作系统面试题.md
+++ b/source/_posts/2020-07-02-操作系统面试题.md
@@ -11,7 +11,7 @@ description: 操作系统面试题汇总
 
 # 操作系统面试题
 
-### **进程内存分布**
+#### **进程内存分布**
 
 1）正文段（代码段）——CPU执行的机器指令部分；一个程序只有一个副本；只读，防止程序由于意外事故而修改自身指令；   
 
@@ -19,7 +19,7 @@ description: 操作系统面试题汇总
 
 3）非初始化数据段（bss段）——在程序中没有初始化的全局变量；内核将此段初始化为0。（这就是为什么全局内置类型变量会初始化，而局部变量就为未初始化的未知值）     
 
-4）栈——增长方向：自顶向下增长；自动变量以及每次函数调用时所需要保存的信息（返回地址；环境信息。
+4）栈——增长方向：自顶向下增长；自动变量以及每次函数调用时所需要保存的信息（返回地址；环境信息）
 
 5）堆——动态存储分。
 
@@ -27,7 +27,7 @@ description: 操作系统面试题汇总
 ————————————————
 c语言种static的作用：https://blog.csdn.net/cc198877/article/details/8844729
 
-### 堆区和栈区的区别
+#### 堆区和栈区的区别
 
 从以下及各方面进行说明：
 
@@ -35,27 +35,78 @@ c语言种static的作用：https://blog.csdn.net/cc198877/article/details/88447
 
 https://blog.csdn.net/shanshanhi/article/details/50904706
 
-### 函数栈、线程栈和进程栈
+#### 函数栈、线程栈和进程栈
 
-### **内存对齐**
+#### **内存对齐**
 
-### 虚拟内存
+##### 原因
 
-### **内核态和用户态，进程上下文和中断上下文**
+CPU每次寻址都是要消费时间的，如果一次取不完数据就要取多次。比如int类型的变量a占4Byte，假设在内存中没有对齐(**所谓对齐，指的是内存中数据的首地址是CPU单次获取数据大小的整数倍**)，且存放在0x00000003 - 0x00000006处(**0x00000003不是4的整数倍**)。那么每次取4字节(32位宽总线)的CPU第一次取到[0x00000000 - 0x00000003]，只得到变量a的1/4数据，进而需要进行第二次取数[0x00000004 - 0x00000007]，为了得到int类型的一个变量，却需要两次访问内存，并且还需要拼接处理，**性能较低，这是其一**。
+
+有些CPU(ARM架构的)在内存非对齐的情况下，执行二进制代码会崩溃，因为不是所有的硬件平台都能访问任意地址上的任意数据的。倘若代码移植到其他不支持的平台上，**不具有可移植性，这是其二。**
+
+##### 规则
+
+结构体的成员变量，第一个成员变量的偏移量为 0。往后的每个成员变量的对齐值必须为**编译器默认对齐长度**（`#pragma pack(n)`）或**当前成员变量类型的长度**（`unsafe.Sizeof`），取**最小值作为当前类型的对齐值**。其偏移量必须为对齐值的整数倍；
+
+结构体本身，对齐值必须为**编译器默认对齐长度**（`#pragma pack(n)`）或**结构体的所有成员变量类型中的最大长度**，取**最大数的最小整数倍**作为对齐值。
+
+https://eddycjy.gitbook.io/golang/di-1-ke-za-tan/go-memory-align
+
+https://zhuanlan.zhihu.com/p/101140160
+
+#### 虚拟内存
+
+#### **内核态和用户态，进程上下文和中断上下文**
 
 https://www.cnblogs.com/Anker/p/3269106.html
 
 &emsp;&emsp;当一个进程在执行时,CPU的所有寄存器中的值、进程的状态以及堆栈中的内容被称为该进程的上下文。当内核需要切换到另一个进程时，它需要保存当前进程的所有状态，即保存当前进程的上下文，以便在再次执行该进程时，能够必得到切换时的状态执行下去。在LINUX中，当前进程上下文均保存在进程的任务数据结构中。在发生中断时,内核就在被中断进程的上下文中，在内核态下执行中断服务例程。但同时会保留所有需要用到的资源，以便中继服务结束时能恢复被中断进程的执行。
 
-### 死锁的必要条件
+#### 死锁的必要条件
 
 - 互斥：每个资源要么已经分配给了一个进程，要么就是可用的。
 - 占有和等待：已经得到了某个资源的进程可以再请求新的资源。
 - 不可抢占：已经分配给一个进程的资源不能强制性地被抢占，它只能被占有它的进程显式地释放。
 - 环路等待：有两个或者两个以上的进程组成一条环路，该环路中的每个进程都在等待下一个进程所占有的资源。
 
-### **互斥锁和自旋锁的区别**
+#### **互斥锁和自旋锁的区别**
 
 互斥锁属于sleep-waiting类型的锁，自旋锁则不然，它属于busy-waiting类型的锁。
 
 https://blog.csdn.net/susidian/article/details/51068858
+
+#### 进程线程间的通信方式(IPC)
+
+1. （匿名）管道，半双工通信，只能在有亲缘关系的进程中使用；
+2. 有名管道(FIFO)
+3. 消息队列，是消息的链表，存放在内核中并由消息队列标识符标识；
+4. 信号量，是一个计数器，用于实现进程间的互斥和同步
+5. 信号
+6.  共享内存
+7. 套接字通信
+
+#### 进程间的同步方式用过哪些
+
+信号量和管程
+
+#### 线程间同步
+
+互斥量：采用互斥对象机制，只有拥有互斥对象的线程才有访问公共资源的权限。因为互斥对象只有一个，所以可以保证公共资源不会被多个线程同时访问。
+
+信号量：它允许同一时刻多个线程访问同一资源，但是需要控制同一时刻访问此资源的最大线程数量。
+
+事件（信号）：通过通知操作的方式来保持多线程同步，还可以方便的实现多线程优先级的比较操作
+
+知乎链接：https://zhuanlan.zhihu.com/p/23755202
+
+https://blog.csdn.net/wuhuagu_wuhuaguo/article/details/78591330
+
+#### 进程有哪几种状态
+
+- 就绪状态 ：进程已经获得除处理机以外的全部所需资源，只要获得处理机便可立即执行，则称此时的状态为就绪状态
+- 运行状态 ：当进程已经获得处理机，且其程序正在处理机上运行，则称进程此时的状态为运行状态
+- 阻塞状态 ：正在执行的进程，由于等待某个事件发生而无法执行时，便放弃处理机而处于阻塞状态。引起阻塞状态的事件可以有多种，例如，等待I/O完成、申请缓冲区不能满足、等待信号等等
+
+#### 操作系统中进程调度策略
+
