创建linux备忘录
创建linux备忘录

--- a/source/_posts/2020-07-02-操作系统面试题.md
+++ b/source/_posts/2020-07-02-操作系统面试题.md
@@ -9,7 +9,7 @@ description: 操作系统面试题汇总
 
 
 
-# 操作系统面试题
+## 操作系统面试题
 
 #### **进程内存分布**
 
@@ -41,15 +41,15 @@ https://blog.csdn.net/shanshanhi/article/details/50904706
 
 ##### 原因
 
-CPU每次寻址都是要消费时间的，如果一次取不完数据就要取多次。比如int类型的变量a占4Byte，假设在内存中没有对齐(**所谓对齐，指的是内存中数据的首地址是CPU单次获取数据大小的整数倍**)，且存放在0x00000003 - 0x00000006处(**0x00000003不是4的整数倍**)。那么每次取4字节(32位宽总线)的CPU第一次取到[0x00000000 - 0x00000003]，只得到变量a的1/4数据，进而需要进行第二次取数[0x00000004 - 0x00000007]，为了得到int类型的一个变量，却需要两次访问内存，并且还需要拼接处理，**性能较低，这是其一**。
+CPU每次寻址都是要消费时间的，如果一次取不完数据就要取多次。比如int类型的变量a占4Byte，假设在内存中没有对齐(所谓对齐，指的是内存中数据的首地址是CPU单次获取数据大小的整数倍)，且存放在0x00000003 - 0x00000006处(0x00000003不是4的整数倍)。那么每次取4字节(32位宽总线)的CPU第一次取到[0x00000000 - 0x00000003]，只得到变量a的1/4数据，进而需要进行第二次取数[0x00000004 - 0x00000007]，为了得到int类型的一个变量，却需要两次访问内存，并且还需要拼接处理，性能较低，这是其一。
 
-有些CPU(ARM架构的)在内存非对齐的情况下，执行二进制代码会崩溃，因为不是所有的硬件平台都能访问任意地址上的任意数据的。倘若代码移植到其他不支持的平台上，**不具有可移植性，这是其二。**
+有些CPU(ARM架构的)在内存非对齐的情况下，执行二进制代码会崩溃，因为不是所有的硬件平台都能访问任意地址上的任意数据的。倘若代码移植到其他不支持的平台上，不具有可移植性，这是其二。
 
 ##### 规则
 
-结构体的成员变量，第一个成员变量的偏移量为 0。往后的每个成员变量的对齐值必须为**编译器默认对齐长度**（`#pragma pack(n)`）或**当前成员变量类型的长度**（`unsafe.Sizeof`），取**最小值作为当前类型的对齐值**。其偏移量必须为对齐值的整数倍；
+结构体的成员变量，第一个成员变量的偏移量为 0。往后的每个成员变量的对齐值必须为编译器默认对齐长度（`#pragma pack(n)`）或当前成员变量类型的长度（`unsafe.Sizeof`），取最小值作为当前类型的对齐值。其偏移量必须为对齐值的整数倍；
 
-结构体本身，对齐值必须为**编译器默认对齐长度**（`#pragma pack(n)`）或**结构体的所有成员变量类型中的最大长度**，取**最大数的最小整数倍**作为对齐值。
+结构体本身，对齐值必须为编译器默认对齐长度（`#pragma pack(n)`）或结构体的所有成员变量类型中的最大长度，取最大数的最小整数倍作为对齐值。
 
 https://eddycjy.gitbook.io/golang/di-1-ke-za-tan/go-memory-align
 
@@ -57,11 +57,25 @@ https://zhuanlan.zhihu.com/p/101140160
 
 #### 虚拟内存
 
+虚拟内存是计算机系统内存管理的一种技术。它使得应用程序认为它拥有连续的可用的内存（一个连续完整的地址空间），而实际上，它通常是被分隔成多个物理内存碎片，还有部分暂时存储在外部磁盘存储器上，在需要时进行数据交换。
+
+#### 追踪内存使用情况的两种方法
+
+位图
+
+空闲链表：首次适配算法、下次适配算法、最佳适配算法、最差适配算法、快速适配算法
+
+#### 缺页异常及其常用算法
+
+OPT、FIFO、LRU
+
+https://www.cnblogs.com/sunsky303/p/9214223.html
+
 #### **内核态和用户态，进程上下文和中断上下文**
 
-https://www.cnblogs.com/Anker/p/3269106.html
-
 &emsp;&emsp;当一个进程在执行时,CPU的所有寄存器中的值、进程的状态以及堆栈中的内容被称为该进程的上下文。当内核需要切换到另一个进程时，它需要保存当前进程的所有状态，即保存当前进程的上下文，以便在再次执行该进程时，能够必得到切换时的状态执行下去。在LINUX中，当前进程上下文均保存在进程的任务数据结构中。在发生中断时,内核就在被中断进程的上下文中，在内核态下执行中断服务例程。但同时会保留所有需要用到的资源，以便中继服务结束时能恢复被中断进程的执行。
+
+https://www.cnblogs.com/Anker/p/3269106.html
 
 #### 死锁的必要条件
 
@@ -92,11 +106,12 @@ https://blog.csdn.net/susidian/article/details/51068858
 
 #### 线程间同步
 
-互斥量：采用互斥对象机制，只有拥有互斥对象的线程才有访问公共资源的权限。因为互斥对象只有一个，所以可以保证公共资源不会被多个线程同时访问。
+- 互斥量：采用互斥对象机制，只有拥有互斥对象的线程才有访问公共资源的权限。因为互斥对象只有一个，所以可以保证公共资源不会被多个线程同时访问。
 
-信号量：它允许同一时刻多个线程访问同一资源，但是需要控制同一时刻访问此资源的最大线程数量。
+- 信号量：它允许同一时刻多个线程访问同一资源，但是需要控制同一时刻访问此资源的最大线程数量。
 
-事件（信号）：通过通知操作的方式来保持多线程同步，还可以方便的实现多线程优先级的比较操作
+- 事件（信号）：通过通知操作的方式来保持多线程同步，还可以方便的实现多线程优先级的比较操作
+
 
 知乎链接：https://zhuanlan.zhihu.com/p/23755202
 
@@ -110,3 +125,17 @@ https://blog.csdn.net/wuhuagu_wuhuaguo/article/details/78591330
 
 #### 操作系统中进程调度策略
 
+#### Docker资源隔离和限制实现原理
+
+http://lionheartwang.github.io/blog/2018/03/18/dockerzi-yuan-ge-chi-he-xian-zhi-shi-xian-yuan-li/
+
+#### 用户态到内核态的切换方式
+
+1. 系统调用：用户态进程主动通过系统调用申请操作系统提供的服务程序
+2. 异常：发生了不可预知的异常，切换到内核相关的异常处理程序，如缺页异常
+3. 外设中断：外设完成用户请求的操作后向CPU发出中断信号，CPU暂停执行下一条指令，转而执行终端处理程序。如果之前执行的指令是用户态下的程序中的，那么也会发生切换
+
+&emsp;&emsp;大多数文件系统的默认I/O都是缓存I/O，操作系统将数据缓存在文件系统的页缓存中，然后才会从操作系统内核的缓冲区拷贝到应用程序的地址空间。因此一次I/O操作，例如`read`发生时会经历两个阶段：
+
+1. 等待数据准备
+2. 将数据从内核拷贝到进程
