--- a/source/_posts/2020-07-03-计算机网络面试题.md
+++ b/source/_posts/2020-07-03-计算机网络面试题.md
@@ -7,22 +7,41 @@ tags:
 description: 计算机网络面试题总结
 ---
 
-# 计算机网络面试题总结
+## 计算机网络面试题总结
 
-#### tcp 3次握手 4次挥手
+#### tcp 3次握手
+
+1. 请求端（通常称为客户）发送一个SYN段指明客户打算连接的服务器的端口，以及初始序号（ISN）。这个SYN段为报文段1。
+2. 服务器发回包含服务器的初始序号的SYN报文段（报文段2）作为应答。同时，将确认序号设置为客户的ISN加1以对客户的SYN报文段进行确认。一个SYN将占用一个序号。
+3. 客户必须将确认序号设置为服务器的ISN加1以对服务器的SYN报文段进行确认（报文段3）。 这三个报文段完成连接的建立。
+
+#### tcp 4次挥手
+
+一个TCP连接是全双工（即数据在两个方向上能同时传递），因此每个方向必须单独进行关闭。当一方完成它的数据发送任务后就发送一个FIN来终止这个方向连接。当一端收到一个FIN，它必须通知应用层另一端已经终止了那个方向的数据传送。所以TCP终止连接的过程需要四个过程，称之为四次握手过程。
 
 #### TCP和UDP异同和使用场景
 
 #### **拥塞控制的四种算法**
 
-1. **慢开始算法（接收窗口rwnd，拥塞窗口cwnd）** 在TCP 刚刚连接好并开始发送TCP 报文段时，先令拥塞窗口cwnd = 1, 即一个最大报文段长度MSS 。每收到一个对新报文段的确认后，将cwnd 加1, 即增大一个MSS 。用这样的方法逐步增大发送方的拥塞窗口cwnd, 可使分组注入网络的速率更加合理。使用慢开始算法后，每经过一个传输轮次（即往返时延RTT), 拥塞窗口cwnd 就会加倍，即cwnd 的大小指数式增长。这样，慢开始一直把拥塞窗口cwnd 增大到一个规定的慢开始门限ssthresh（阔值），然后改用拥塞避免算法。
-2.  **拥塞避免算法** 拥寒避免算法的做法如下：发送端的拥塞窗口cwnd 每经过一个往返时延RTT 就增加一个MSS的大小，而不是加倍，使cwnd 按线性规律缓慢增长（即加法增大），而当出现一次超时（网络拥塞）时，令慢开始门限ssthresh 等于当前cwnd 的一半（即乘法减小）
-3. **快重传** 快重传技术使用了冗余ACK 来检测丢包的发生。同样，冗余ACK 也用千网络拥塞的检测（丢了包当然意味着网络可能出现了拥塞）。快重传并非取消重传计时器，而是在某些情况下可更早地重传丢失的报文段。当发送方连续收到三个重复的ACK 报文时，直接重传对方尚未收到的报文段，而不必等待那个报文段设置的重传计时器超时。
-4.  **快恢复** 快恢复算法的原理如下：发送端收到连续三个冗余ACK (即重复确认）时，执行“乘法减小”算法，把慢开始门限ssthresh 设置为出现拥塞时发送方cwnd 的一半。与慢开始（慢开始算法将拥塞窗口cwnd 设置为1) 的不同之处是，它把cwnd 的值设置为慢开始门限ssthresh 改变后的数值，然后开始执行拥塞避免算法("加法增大")'使拥塞窗口缓慢地线性增大。由于跳过了cwnd 从1 起始的慢开始过程，所以被称为快恢复。
+1. **慢开始算法（接收窗口rwnd，拥塞窗口cwnd）** 
+
+   1) 连接建好的开始先初始化拥塞窗口cwnd大小为1，表明可以传一个MSS大小的数据。 2) 每当收到一个ACK，cwnd大小加一，呈线性上升。 3) 每当过了一个往返延迟时间RTT(Round-Trip Time)，cwnd大小直接翻倍，乘以2，呈指数让升。 4) 还有一个ssthresh（slow start threshold），是一个上限，当cwnd >= ssthresh时，就会进入“拥塞避免算法”。
+
+2. **拥塞避免算法** 拥寒避免算法的做法如下：发送端的拥塞窗口cwnd 每经过一个往返时延RTT 就增加一个MSS的大小，而不是加倍，使cwnd 按线性规律缓慢增长（即加法增大），而当出现一次超时（网络拥塞）时，令慢开始门限ssthresh 等于当前cwnd 的一半（即乘法减小）。
+
+3. **快重传** 快重传技术使用了冗余ACK 来检测丢包的发生。同样，冗余ACK 也用于网络拥塞的检测（丢了包当然意味着网络可能出现了拥塞）。快重传并非取消重传计时器，而是在某些情况下可更早地重传丢失的报文段。当发送方连续收到三个重复的ACK 报文时，直接重传对方尚未收到的报文段，而不必等待那个报文段设置的重传计时器超时。
+
+4. **快恢复** 快恢复算法的原理如下：发送端收到连续三个冗余ACK (即重复确认）时，执行“乘法减小”算法，把慢开始门限ssthresh 设置为出现拥塞时发送方cwnd 的一半。与慢开始（慢开始算法将拥塞窗口cwnd 设置为1) 的不同之处是，它把cwnd 的值设置为慢开始门限ssthresh 改变后的数值，然后开始执行拥塞避免算法("加法增大")'使拥塞窗口缓慢地线性增大。由于跳过了cwnd 从1 起始的慢开始过程，所以被称为快恢复。
 
 作者：程序员宝藏
 链接：https://zhuanlan.zhihu.com/p/126234650
 来源：知乎
+
+![](https://picb.zhimg.com/v2-381745de8b537892ca8163a2d129f1fe_r.jpg)
+
+#### TCP中的sack
+
+#### TCP BBR 拥塞算法
 
 #### 路由器怎么工作的
 
@@ -30,9 +49,19 @@ https://zhuanlan.zhihu.com/p/133094539
 
 #### 防火墙的工作原理
 
+#### PDU
+
+协议数据单元PDU（Protocol Data Unit）是指对等层次之间传递的数据单位。
+
+1. 物理层的 PDU是**数据位**（bit）
+2. 数据链路层的 PDU是**数据帧**（frame），
+3. 网络层的PDU是**数据包**（packet），
+4. 传输层的 PDU是**数据段**（segment），
+5. 其他更高层次的PDU是报文（message）。
+
 #### NAT
 
-网络地址转换，在计算机网络中是一种在 IP 数据包通过路由器或防火墙时重写来源IP地址或目的IP地址的技术。
+网络地址转换，在计算机网络中是一种在 IP 数据包通过路由器或防火墙时重写来源IP地址或目的IP地址的技术。现在常用的都是NAPT，带有端口的NAT。
 
 #### 网络层和传输层是怎么区分的
 
@@ -42,5 +71,84 @@ https://blog.csdn.net/qq_28267025/article/details/73604368
 
 https://blog.csdn.net/markman101/article/details/7671016?utm_medium=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-1.nonecase&depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-1.nonecase
 
+#### socket套接字
+
+所谓套接字(Socket)，就是对网络中不同主机上的应用进程之间进行双向通信的端点的抽象。一个套接字就是网络上进程通信的一端，提供了应用层进程利用网络协议交换数据的机制。从所处的地位来讲，套接字上联应用进程，下联网络协议栈，是应用程序通过网络协议进行通信的接口，是应用程序与网络协议根进行交互的接口。
+
+#### HTTP常见面试题
+
+https://www.cnblogs.com/xiaolincoding/p/12442435.html
+
+#### HTTP状态码
+
+状态代码有三位数字组成，第一个数字定义了响应的类别，且有五种可能取值：
+
+1xx：指示信息--表示请求已接收，继续处理
+
+2xx：成功--表示请求已被成功接收、理解、接受
+
+3xx：重定向--要完成请求必须进行更进一步的操作
+
+4xx：客户端错误--请求有语法错误或请求无法实现
+
+5xx：服务器端错误--服务器未能实现合法的请求
+
+**常见状态代码**、状态描述、说明：
+
+200 OK      //客户端请求成功
+
+301 Moved Permanently //表示永久重定向
+
+302 Found  //表示临时重定向，说明请求的资源还在，但暂时需要用另一个 URL 来访问。
+
+400 Bad Request  //客户端请求有语法错误，不能被服务器所理解
+
+401 Unauthorized //请求未经授权，这个状态代码必须和WWW-Authenticate报头域一起使用
+
+403 Forbidden  //服务器收到请求，但是拒绝提供服务
+
+404 Not Found  //请求资源不存在，eg：输入了错误的URL
+
+500 Internal Server Error //服务器发生不可预期的错误
+
+503 Server Unavailable  //服务器当前不能处理客户端的请求，一段时间后可能恢复正常
+
+#### HTTP无状态协议
+
+&emsp;&emsp;HTTP无状态协议，是指协议对于事务处理没有记忆能力。缺少状态意味着如果后续处理需要前面的信息，则它必须重传，这样可能导致每次连接传送的数据量增大。另一方面，在服务器不需要先前信息时它的应答就较快。
+
+&emsp;&emsp;HTTP本身是一个无状态的连接协议，为了支持客户端与服务器之间的交互，我们就需要通过不同的技术为交互存储状态，而这些不同的技术就是Cookie和Session了。
+
 #### HTTPs的流程
 
+TCP三次握手加TLS三次握手
+
+#### 介绍HTTP2.0及其优点
+
+- 头部压缩
+- 二进制分帧
+- 数据流
+- 多路复用
+- 服务器推送
+
+#### websocket
+
+WebSocket 协议在2008年诞生，2011年成为国际标准。所有浏览器都已经支持了。
+
+它的最大特点就是，服务器可以主动向客户端推送信息，客户端也可以主动向服务器发送信息，是真正的双向平等对话，属于服务器推送技术的一种。
+
+其他特点包括：
+
+（1）建立在 TCP 协议之上，服务器端的实现比较容易。
+
+（2）与 HTTP 协议有着良好的兼容性。默认端口也是80和443，并且握手阶段采用 HTTP 协议，因此握手时不容易屏蔽，能通过各种 HTTP 代理服务器。
+
+（3）数据格式比较轻量，性能开销小，通信高效。
+
+（4）可以发送文本，也可以发送二进制数据。
+
+（5）没有同源限制，客户端可以与任意服务器通信。
+
+（6）协议标识符是`ws`（如果加密，则为`wss`），服务器网址就是 URL。
+
+阮一峰的博客：http://www.ruanyifeng.com/blog/2017/05/websocket.html
