creat sort of python

--- a/source/_posts/2020-07-02-操作系统面试题.md
+++ b/source/_posts/2020-07-02-操作系统面试题.md
@@ -1,15 +1,15 @@
 ---
-title: 操作系统面试题
+title: 操作系统笔记
 date: 2020-07-02
 tags: 
 - 操作系统
 - 面试题
-description: 操作系统面试题汇总
+description: 操作系统笔记，记录一些常见的问题。
 ---
 
 
 
-## 操作系统面试题
+## 操作系统
 
 #### **进程内存分布**
 
@@ -84,6 +84,13 @@ https://www.cnblogs.com/Anker/p/3269106.html
 - 不可抢占：已经分配给一个进程的资源不能强制性地被抢占，它只能被占有它的进程显式地释放。
 - 环路等待：有两个或者两个以上的进程组成一条环路，该环路中的每个进程都在等待下一个进程所占有的资源。
 
+#### 四种处理死锁的策略
+
+1. 鸵鸟算法，把头埋在沙子里面，假装什么事都没有发生，就是忽略死锁；
+2. 检测死锁并恢复，让死锁发生，检测死锁是否发生，一旦发生死锁，采取行动解决死锁；
+3. 仔细对资源进行分配，动态的避免死锁，例如银行家算法；
+4. 通过破坏死锁的四个必要条件之一，防止死锁的产生。
+
 #### **互斥锁和自旋锁的区别**
 
 互斥锁属于sleep-waiting类型的锁，自旋锁则不然，它属于busy-waiting类型的锁。
@@ -139,3 +146,33 @@ http://lionheartwang.github.io/blog/2018/03/18/dockerzi-yuan-ge-chi-he-xian-zhi-
 
 1. 等待数据准备
 2. 将数据从内核拷贝到进程
+
+#### select、poll和epoll
+
+#### 系统如何提高并发性
+
+1、提高CPU并发计算能力
+
+（1）多进程&多线程
+
+（2）减少进程切换，使用线程，考虑进程绑定CPU
+
+（3）减少使用不必要的锁，考虑无锁编程
+
+（4）考虑进程优先级
+
+（5）关注系统负载
+
+2、改进I/O模型
+
+（1）DMA技术
+
+（2）异步I/O
+
+（3）改进多路I/O就绪通知策略，epoll
+
+（4）Sendfile
+
+（5）内存映射
+
+（6）直接I/O
