--- a/source/_posts/2020-07-03-计算机网络面试题.md
+++ b/source/_posts/2020-07-03-计算机网络面试题.md
@@ -1,25 +1,69 @@
 ---
-title: 计算机网络面试题
+title: 计算机网络复习
 date: 2020-07-03 17:25:31
 tags: 
 - 计算机网络
 - 面试题
-description: 计算机网络面试题总结
+description: 计算机网络复习，重点在TCP的理解和HTTP的理解
 ---
 
-## 计算机网络面试题总结
+## 计算机网络复习
 
 #### tcp 3次握手
 
 1. 请求端（通常称为客户）发送一个SYN段指明客户打算连接的服务器的端口，以及初始序号（ISN）。这个SYN段为报文段1。
 2. 服务器发回包含服务器的初始序号的SYN报文段（报文段2）作为应答。同时，将确认序号设置为客户的ISN加1以对客户的SYN报文段进行确认。一个SYN将占用一个序号。
-3. 客户必须将确认序号设置为服务器的ISN加1以对服务器的SYN报文段进行确认（报文段3）。 这三个报文段完成连接的建立。
+3. 客户必须将确认序号设置为服务器的 ISN 加1以对服务器的SYN报文段进行确认（报文段3）。 这三个报文段完成连接的建立。
 
-#### tcp 4次挥手
+**原因**：客户端和服务端通信前要进行连接，“3次握手”的作用就是`双方都能明确自己和对方的收、发能力是正常的`。
+
+`第一次握手`：客户端发送网络包，服务端收到了。这样服务端就能得出结论：客户端的发送能力、服务端的接收能力是正常的。
+
+`第二次握手`：服务端发包，客户端收到了。这样客户端就能得出结论：服务端的接收、发送能力，客户端的接收、发送能力是正常的。 从客户端的视角来看，我接到了服务端发送过来的响应数据包，说明服务端接收到了我在第一次握手时发送的网络包，并且成功发送了响应数据包，这就说明，服务端的接收、发送能力正常。而另一方面，我收到了服务端的响应数据包，说明我第一次发送的网络包成功到达服务端，这样，我自己的发送和接收能力也是正常的。
+
+`第三次握手`：客户端发包，服务端收到了。这样服务端就能得出结论：客户端的接收、发送能力，服务端的发送、接收能力是正常的。 第一、二次握手后，服务端并不知道客户端的接收能力以及自己的发送能力是否正常。而在第三次握手时，服务端收到了客户端对第二次握手作的回应。从服务端的角度，我在第二次握手时的响应数据发送出去了，客户端接收到了。所以，我的发送能力是正常的。而客户端的接收能力也是正常的。
+
+经历了上面的三次握手过程，客户端和服务端都确认了自己的接收、发送能力是正常的。之后就可以正常通信了。
+
+#### TCP 4次挥手
 
 一个TCP连接是全双工（即数据在两个方向上能同时传递），因此每个方向必须单独进行关闭。当一方完成它的数据发送任务后就发送一个FIN来终止这个方向连接。当一端收到一个FIN，它必须通知应用层另一端已经终止了那个方向的数据传送。所以TCP终止连接的过程需要四个过程，称之为四次握手过程。
 
+#### 什么是半连接队列？什么是SYN泛洪？怎么预防SYN泛洪？
+
+服务器第一次收到客户端的 SYN 之后，就会处于 SYN_RCVD 状态，但是此时双方还没有完全建立连接，服务器会将这种状态请求连接放在一个队列中，这就是半连接队列。
+
+全连接队列：已经完成三次握手建立的连接队列。如果队列满了就可能会出现丢包现象。 
+
+SYN泛洪：用户不停向服务器发送 SYN 请求服务器的连接，但是不完成连接建立的后续过程，导致服务器需要记录 SYN 段的序号，最后导致服务器资源耗尽。 
+
+如何解决 SYN 泛洪：服务器不记录序号，而只是选择一个加密生成的序号将其返回，并忘记它。如果 三次握手完成该序号加1后返回服务器，服务器再使用相同的加密函数重新生成序号，检测序号是否正 确。 还有几种方法： 缩短超时时间、增加最大半连接数、过滤网关防护、SYN cookies 技术。
+
 #### TCP和UDP异同和使用场景
+
+- TCP是面向连接的，UDP是无连接的
+
+  > **追问**：什么是面向连接？什么是无连接的？
+  >
+  > 面向连接和无连接指的都是协议，不是物理介质本身。本质区别在于：对于无连接协议来说，每个分组的处理都独立于其它分组，而对面向连接的协议来说，则维护了与后继分组有关的状态信息，发送之前需要建立连接。
+
+- TCP是可靠的，UDP是不可靠的
+
+  > 追问：什么是可靠和不可靠？ TCP传送数据无差错、不丢失、不重复并且按需到达；UDP尽最大努力交付，不需要给出任 何确认，不保证可靠交付。
+
+- TCP是面向字节流的，UDP是面向报文的
+
+  追问：为什么这么说？ 
+
+  > TCP面向字节流是指发送数据时以字节为单位，一个数据包可以拆分成若干组进行发送；但是UDP面向报文是指无论应用层交给UDP多长的报文，UDP就保留边界照样发送，如果报文 太长则需要通过IP进行分片，降低效率。因此TCP段格式中也就不存在长度项，但是UDP中有。
+
+- TCP只支持点对点通信，UDP支持一对一、一对多、多对一、多对多
+
+- TCP有拥塞控制，UDP没有。网络出现拥塞不会使得源主机的发送速率降低，这对于实时应用很重要。
+
+- TCP首部开销（20字节）比UDP首部开销（8字节）要大
+
+- UDP的主机不需熬维持复杂的连接状态表，因为是无连接的。
 
 #### **拥塞控制的四种算法**
 
