--- a/source/_posts/2020-07-13-MYSQL数据库复习.md
+++ b/source/_posts/2020-07-13-MYSQL数据库复习.md
@@ -21,7 +21,7 @@ https://www.cnblogs.com/fanguangdexiaoyuer/p/10821646.html
 > - InnoDB支持行级锁，而MyISAM支持表级锁
 > - InnoDB支持MVCC, 而MyISAM不支持
 > - InnoDB支持外键，而MyISAM不支持
-> - InnoDB不支持全文索引，而MyISAM支持。
+> - InnoDB不支持全文索引（5.6之后也支持），而MyISAM支持。
 
 #### 数据库设计三大范式
 
@@ -103,3 +103,46 @@ null值会占用更多的字节,且会在程序中造成很多与预期不符的
 
 #### **MySQL的binlog**
 
+#### 什么是触发器
+
+触发器是一中特殊的存储过程，主要是通过事件来触发而被执行的。它可以强化约束 ，来维护数据的完整性和一致性，可以跟踪数据库内的操作从而不允许未经许可的更 新和变化。可以联级运算。如，某表上的触发器上包含对另一个表的数据操作，而该操作又会导致该表触发器被触发。
+
+#### 什么是视图
+
+在 SQL 中，视图是基于 SQL 语句的结果集的可视化的表。
+
+视图包含行和列，就像一个真实的表。视图中的字段就是来自一个或多个数据库中的真实的表中的字段。我们可以向视图添加 SQL 函数、WHERE 以及 JOIN 语句，我们也可以提交数据，就像这些来自于某个单一的表。
+
+**注释：**数据库的设计和结构不会受到视图中的函数、where 或 join 语句的影响。**视图的增删改有条件限制。**
+
+#### drop、truncate、 delete区别
+
+最基本：
+
+- drop直接删掉表。 
+- truncate删除表中数据，再插入时自增长id又从1开始。 
+- delete删除表中数据，可以加where字句。
+
+#### SQL语句执行很慢的原因
+
+1、大多数情况下很正常，偶尔很慢，则有如下原因
+
+(1)、数据库在刷新脏页，例如 redo log 写满了需要同步到磁盘。
+
+(2)、执行的时候，遇到锁，如表锁、行锁。
+
+2、这条 SQL 语句一直执行的很慢，则有如下原因。
+
+(1)、没有用上索引：例如该字段没有索引；由于对字段进行运算、函数操作导致无法用索引。
+
+(2)、数据库选错了索引。
+
+https://www.cnblogs.com/myseries/p/10719074.html
+
+#### 全局检索
+
+https://www.jianshu.com/p/645402711dac
+
+#### MySQL技术内幕系列博客
+
+https://blog.csdn.net/weixin_44844089/category_9984144.html
