--- a/source/_posts/2020-07-13-MYSQL数据库复习.md
+++ b/source/_posts/2020-07-13-MYSQL数据库复习.md
@@ -25,9 +25,22 @@ https://www.cnblogs.com/fanguangdexiaoyuer/p/10821646.html
 
 #### 数据库设计三大范式
 
-- 第一范式: 每个列都不可以再拆分.
-- 第二范式: 非主键列完全依赖于主键,而不能是依赖于主键的一部分. 
-- 第三范式: 非主键列只依赖于主键,不依赖于其他非主键.
+- 第一范式: 每个列都不可以再拆分（字段的原子性）；
+- 第二范式: 非主键列完全依赖于主键，而不能是依赖于主键的一部分（主要针对联合主键而言）；
+- 第三范式: 每一列数据都和主键直接相关，而不能间接相关。
+
+> 第一范式：1NF是对属性的原子性约束，要求属性具有原子性，不可再分解；
+> 通俗的理解是，字段还可以再分吗？如过不能，则是符合1NF的设计。
+>
+> 第二范式：2NF是对记录的惟一性约束，要求记录有惟一标识，即实体的惟一性；
+> 简单的解释，比如你和一个女生约会建立一张表，不用每条约会记录都记录她的身高、体重，将身高体重单独的存在一张表中供查询即可。
+>
+> 第三范式：3NF是对字段冗余性的约束，即任何字段不能由其他字段派生出来，它要求字段没有冗余。
+> 打个比方，比如评论表，如果你将用户ID，用户头像都放在这留言表中，就是不合适的了。用户头像是依赖于用户ID，而不依赖该评论。
+
+#### MySQL索引问题
+
+https://juejin.im/post/6844903967193825294#heading-13
 
 #### 什么情况下检索会失效
 
@@ -51,7 +64,7 @@ https://www.cnblogs.com/fanguangdexiaoyuer/p/10821646.html
 
 - **脏读**，A事务读取到了B事务未提交的内容,而B事务后面进行了回滚.
 - **不可重复读**，当设置A事务只能读取B事务已经提交的部分,会造成在A事务内的两次查询,结果竟然不一样,因为在此期间B事务进行了提交操作.
-- **幻读**，A事务读取了一个范围的内容,而同时B事务在此期间插入了一条数据，造成"幻觉".
+- **幻读**，A事务读取了一个范围的内容，而同时B事务在此期间插入了一条数据，造成"幻觉".
 - **更新丢失**，当两个或多个事务选择同一行，然后基于最初选定的值更新该行时，由于每个事务都不知道其他事务的存在，就会发生丢失更新问题 —— 最后的更新覆盖了其他事务所做的更新。
 
 #### 四种隔离级别
@@ -67,23 +80,41 @@ InnoDB默认使用的是可重复读隔离级别.
 
 #### MySQL是如何解决不可重复读隔离级别中的幻读问题的
 
-MVCC（多版本并发控制）
+> **快照读**
+>
+> 我们普通的SELECT语句都是普通读，也就是读取的数据都是事务开始时那个状态的数据，普通读的幻读问题主要是通过MVCC来解决的
+>
+> **实时读**
+>
+> SELECT *** FOR UPDATE 在查询时会先申请X锁
+>
+> SELECT *** IN SHARE MODE 在查询时会先申请S锁
+>
+> 就是实时读，就是读取的是实时的数据，而不快照数据，读的时候会加Next-Key Lock锁住当前的记录，以及左右两个区间的间隙，这样在读的时候就不能往我们的查询范围插入数据了。
+
+MVCC（多版本并发控制），gap锁，next-key锁
 
 https://draveness.me/database-concurrency-control/
 
+https://zhuanlan.zhihu.com/p/66791480
+
 #### **在建立索引的时候,都有哪些需要考虑的因素呢**
 
-建立索引的时候一般要考虑到字段的使用频率,经常作为条件进行查询的字段比较适合.如果需要建立联合索引的话,还需要考虑联合索引中的顺序。
+建立索引的时候一般要考虑到字段的使用频率，经常作为条件进行查询的字段比较适合。如果需要建立联合索引的话,还需要考虑联合索引中的顺序。
 
 #### MySQL的锁机制
 
-共享锁: 又叫做读锁. 当用户要进行数据的读取时,对数据加上共享锁.共享锁可以同时加上多个.
-
-排他锁: 又叫做写锁. 当用户要进行数据的写入时,对数据加上排他锁.排他锁只可以加一个,他和其他的排他锁,共享锁都相斥.
+> 共享锁: 又叫做读锁. 当用户要进行数据的读取时,对数据加上共享锁.共享锁可以同时加上多个.
+>
+> 排他锁: 又叫做写锁. 当用户要进行数据的写入时,对数据加上排他锁.排他锁只可以加一个,他和其他的排他锁,共享锁都相斥.
+>
+> 乐观锁
+>
+> 悲观锁
 
 #### innodb的gap锁
 
-gap就是索引树中插入新记录的空隙，Gap锁针对的是非唯一索引，而如果是唯一索引则不会存在Gap锁。
+gap就是索引树中插入新记录的空隙，Gap锁针对的是**非唯一索引**，而如果是唯一索引则不会存在Gap锁。
 
 https://amsimple.com/blog/article/72.html
 
@@ -103,6 +134,14 @@ null值会占用更多的字节,且会在程序中造成很多与预期不符的
 
 #### **MySQL的binlog**
 
+binlog是Mysql sever层维护的一种二进制日志，与innodb引擎中的redo/undo log是完全不同的日志；其主要是用来记录对mysql数据更新或潜在发生更新的SQL语句，并以"事务"的形式保存在磁盘中；
+
+作用主要有：
+
+> - 复制：MySQL Replication在Master端开启binlog，Master把它的二进制日志传递给slaves并回放来达到master-slave数据一致的目的
+> - 数据恢复：通过mysqlbinlog工具恢复数据
+> - 增量备份
+
 #### 什么是触发器
 
 触发器是一中特殊的存储过程，主要是通过事件来触发而被执行的。它可以强化约束 ，来维护数据的完整性和一致性，可以跟踪数据库内的操作从而不允许未经许可的更 新和变化。可以联级运算。如，某表上的触发器上包含对另一个表的数据操作，而该操作又会导致该表触发器被触发。
@@ -114,6 +153,10 @@ null值会占用更多的字节,且会在程序中造成很多与预期不符的
 视图包含行和列，就像一个真实的表。视图中的字段就是来自一个或多个数据库中的真实的表中的字段。我们可以向视图添加 SQL 函数、WHERE 以及 JOIN 语句，我们也可以提交数据，就像这些来自于某个单一的表。
 
 **注释：**数据库的设计和结构不会受到视图中的函数、where 或 join 语句的影响。**视图的增删改有条件限制。**
+
+#### mysql 临时表、内存表和视图
+
+https://developer.aliyun.com/article/42745
 
 #### drop、truncate、 delete区别
 
@@ -146,3 +189,6 @@ https://www.jianshu.com/p/645402711dac
 #### MySQL技术内幕系列博客
 
 https://blog.csdn.net/weixin_44844089/category_9984144.html
+
+#### innodb的自适应hash
+
