--- a/source/_posts/2020-07-13-MYSQL数据库复习.md
+++ b/source/_posts/2020-07-13-MYSQL数据库复习.md
@@ -192,3 +192,10 @@ https://blog.csdn.net/weixin_44844089/category_9984144.html
 
 #### innodb的自适应hash
 
+#### join优化
+
+> SNL，最简单的双重循环
+>
+> INL （Index Nested Loop Join算法），将外层表的结果集作为循环的基础数据，然后循环从该结果集每次一条获取数据作为下一个表的过滤条件去查询数据，然后合并结果。如果有多个表join，那么应该将前面的表的结果集作为循环数据，取结果集中的每一行再到下一个表中继续进行循环匹配，获取结果集并返回给客户端。
+>
+> BNL（Block Nested-Loop算法），将外层循环的行/结果集存入join buffer，内存循环的每一行数据与整个buffer中的记录做比较，可以减少内层循环的扫描次数
