--- a/source/_posts/2020-07-11-设计模式.md
+++ b/source/_posts/2020-07-11-设计模式.md
@@ -7,7 +7,7 @@ tags:
 description: 设计模式复习，六大设计原则，常用的设计模式。
 ---
 
-#### 六大设计原则
+### 六大设计原则
 
 1. 单一职责原则(Single Responsibility Principle)
 2. 开放封闭原则（Open Close Principle）
@@ -15,4 +15,35 @@ description: 设计模式复习，六大设计原则，常用的设计模式。
 4. 依赖倒置原则（Dependence Inversion Principle）
 5. 接口隔离原则（Interface Segregation Principles）
 6. 迪米特原则（Law of Demeter）也称最少知识原则
+
+### 创建型模式
+
+1. 工厂方法模式
+2. 抽象工厂模式
+3. 原型模式
+4. 生成器模式
+5. 单例模式
+
+### 结构型模式
+
+1. 适配器模式
+2. 桥接模式
+3. 组合模式
+4. 装饰模式
+5. 外观模式
+6. 享元模式
+7. 代理模式
+
+### 行为模式
+
+1. 责任链模式
+2. 命令模式
+3. 迭代器模式
+4. 中介者模式
+5. 备忘录模式
+6. 观察者模式
+7. 状态模式
+8. 策略模式
+9. 模板方法模式
+10. 访问者模式
 
